--- a/resources/fxml/pretraga.fxml
+++ b/resources/fxml/pretraga.fxml
@@ -6,9 +6,31 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.Pretraga"
-            prefHeight="400.0" prefWidth="600.0">
+<?import java.net.URL?>
+<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+    <stylesheets>
+        <URL value="@/css/forme.css" />
+    </stylesheets>
+    <columnConstraints>
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints />
+        <RowConstraints />
+    </rowConstraints>
+    <children>
+        <Label text="Naziv:" GridPane.rowIndex="0"  GridPane.columnIndex="0" />
+        <TextField fx:id="fieldNaziv" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+        <ButtonBar prefHeight="40.0" prefWidth="200.0"  GridPane.columnIndex="2" GridPane.rowIndex="0">
+            <buttons>
+                <Button fx:id="btnDodajZnamenitost" onAction="#clickDodajZnamenitost" mnemonicParsing="false" text="Trazi" />
+            </buttons>
+        </ButtonBar>
+        <ListView GridPane.rowIndex="1">
 
-</AnchorPane>
+        </ListView>
+
+    </children>
+</GridPane>
