--- a/resources/fxml/grad.fxml
+++ b/resources/fxml/grad.fxml
@@ -33,13 +33,10 @@
       <TextField fx:id="fieldNaziv" GridPane.columnIndex="1" />
       <Label text="Broj stanovnika:" GridPane.rowIndex="1" />
       <TextField fx:id="fieldBrojStanovnika" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label text="Postanski broj:" GridPane.rowIndex="1" />
-      <TextField fx:id="fielPostanskiBroj" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label text="Postanski broj:" GridPane.rowIndex="2" />
+      <TextField fx:id="fieldPostanskiBroj" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label text="Država:" GridPane.rowIndex="3" />
       <ChoiceBox fx:id="choiceDrzava" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <ListView>
-
-      </ListView>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="4">
          <buttons>
             <Button fx:id="btnDodajZnamenitost" onAction="#clickDodajZnamenitost" mnemonicParsing="false" text="Ok" />
